--- a/package.json
+++ b/package.json
@@ -1,18 +1,24 @@
 {
   "name": "seneca-vue-chrome-extension",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "vue-tsc --noEmit && vite build && npm run copy-assets",
+    "copy-assets": "cp -r public/* dist/",
+    "preview": "vite preview",
+    "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
     "vue": "^3.5.24"
   },
   "devDependencies": {
+    "@types/chrome": "^0.1.32",
+    "@types/node": "^25.0.2",
     "@vitejs/plugin-vue": "^6.0.1",
-    "vite": "^7.2.4"
+    "typescript": "^5.9.3",
+    "vite": "^7.2.4",
+    "vue-tsc": "^3.1.8"
   }
 }
