--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,25 @@
 {
   "manifest_version": 3,
-  "name": "Random Background Color",
-  "version": "1.0",
-  "description": "Cambia el color de fondo de la página de forma aleatoria",
-  "action": {
-    "default_popup": "index.html",
-    "default_title": "Cambiar fondo"
+  "name": "Seneca Extension CSV",
+  "version": "1.0.0",
+  "description": "Bulk all marks from csv to Seneca.",
+  "icons": {
+    "16": "icons/icon-16.png",
+    "48": "icons/icon-48.png",
+    "128": "icons/icon-128.png"
   },
-  "permissions": ["activeTab", "scripting"]
+  "action": {
+    "default_title": "Seneca Extension CSV",
+    "default_icon": {
+      "16": "icons/icon-16.png",
+      "48": "icons/icon-48.png",
+      "128": "icons/icon-128.png"
+    }
+  },
+  "content_scripts": [
+    {
+      "matches": ["https://seneca.juntadeandalucia.es/*"],
+      "js": ["content.js"]
+    }
+  ]
 }
